public/css/style.css
/* ... */
.comments-number {
    font-size: smaller;
    margin-left: 3px;
}

.form-control {
    font-family: 'Ubuntu', sans-serif;
}


.childReplyForm {
    padding-left: 64px;
    margin-bottom: 1em;
    border-bottom: 1px solid #ddd;
    padding-bottom: 1em;
}


/* NEW POST STYLES */

article.post {
    padding-top: 1rem;
    border-bottom: 1px solid #dfdfdf;
}
article.post > .notifications,
article.post > header,
article.post > .content,
article.post > .toolbar,
article.post .comments-container {
    padding: 0 1rem;
}

article.post > .notifications > div:last-child {
    margin-bottom: 1em;
}
article.post > .notifications div {
    color: #959595;
    margin-bottom: 0.5rem;
    font-size: 0.925rem;
}
article.post > .notifications div a,
article.post > .notifications div a:active,
article.post > .notifications div a:visited {
    color: #959595;
}
article.post > .notifications div a:hover {
    color: #ce1717;
}
article.post > .notifications div.recently-commented-notification {
    color: #F87E2C;
}
article.post > .notifications div.recently-commented-notification a,
article.post > .notifications div.recently-commented-notification a:active,
article.post > .notifications div.recently-commented-notification a:visited {
    color: #F87E2C; /* Green #529C5F */
}
article.post > .notifications div.recently-commented-notification a:hover {
    color: #ce1717;
}
article.post > .notifications div.community-notification {
    display: flex;
    align-items: center;
}
article.post > .notifications div.community-notification img {
    width: 20px;
    height: 20px;
    border-radius: 2px;
    margin-right: 5px;
}
article.post > .notifications div.recently-commented-notification a,
article.post > .notifications div.community-notification a,
article.post > .notifications div.boosters-notification a {
    font-weight: 500;
}
article.post > header {
    display: flex;
}
article.post > header img.author-image {
    width: 46px;
    height: 46px;
    border-radius: 5px;
}
article.post > header .post-header-left {
    height: 46px;
    width: 46px;
    margin-right: 5px;
}
article.post > header .post-header-right {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    width: 100%;
    justify-content: center;
}
article.post > header .post-header-right > * {
    /* height: 23px; */
}
article.post > header h2.author-name {
    font-size: 1em;
    font-family: 'Ubuntu', sans-serif;
    letter-spacing: 0;
    margin: 0;
    display: flex;
    overflow: hidden;
    margin-bottom: 4px;
}
article.post > header .author-display-name,
article.comment > header .author-display-name,
#welcome-message-container > footer .author-display-name {
    font-weight: 500;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-right: 5px;
}
article.post > header .author-display-name a,
article.comment > header .author-display-name a,
#welcome-message-container > footer .author-display-name a,
article.post > header .author-username a,
article.comment > header .author-username a,
#welcome-message-container > footer .author-username a {
    color: #1a1717;
}
article.post > header .author-display-name a:hover,
article.comment > header .author-display-name a:hover,
#welcome-message-container > footer .author-display-name a:hover,
article.post > header .author-username a:hover,
article.comment > header .author-username a:hover,
#welcome-message-container > footer .author-username a:hover {
    color: #ce1717;
}
article.post > header .author-username,
article.comment > header .author-username,
#welcome-message-container > footer .author-username {
    color: #959595;
}
article.post > header .author-username:first-child,
article.comment > header .author-username:first-child,
#welcome-message-container > footer .author-username:first-child {
    color: #1a1717;
    font-weight: 500;
}
article.post > header .metadata {
    color: #959595;
    font-size: 0.85rem;
}
article.post > .content {
    position: relative;
    margin: 1rem 0;
    overflow-wrap: break-word;
}
article.post > .content .content-warning {
    margin-bottom: 0.5rem;
}
article.post > .toolbar {
    display: flex;
    justify-content: space-between;
    margin-bottom: 1rem;
    padding-left: 0.65rem;
}
article.post > .toolbar > div {
    display: flex;
    flex: 1;
}
article.post > .toolbar > div:first-child {
    justify-content: flex-start;
}
article.post > .toolbar > div:last-child {
    justify-content: flex-end;
}
article.post > .toolbar > div:first-child  * {
    justify-content: flex-start;
}
article.post > .toolbar > div:last-child * {
    justify-content: flex-end;
}

section.comments {
    font-size: 0.9rem;
    display: none;
}
section.comments:last-child {
    padding-bottom: 0.25rem; /* This looks like a CSS bug */
}
article.comment {
    margin-top: 1rem;
}
article.comment:last-child {
    margin-bottom: 1rem;
}
article.comment.recent-comment-content {
    border-radius: 6px;
    transition: background 0.5s;
}

article.comment.recent-comment-content.flash {
    animation: flash 2s ease-out;
    animation-iteration-count: 1;
}

@keyframes flash {
    0% { background-color: transparent; }
    50% { background-color: #fcfaea; }
    100% { background-color: transparent; }
}

#welcome-message-container > footer,
article.comment > header {
    display: flex;
    overflow: hidden;
}
#welcome-message-container > footer  .welcome-message-container,
article.comment > header .comment-header-container {
    display: flex;
    align-items: center;
    width: 100%;
    overflow: hidden;
}
article.comment > header .comment-header-divider {
    padding: 0 5px 0 1px;
    color: #959595;
}
#welcome-message-container > footer  .author-image,
article.comment > header > .author-image {
    width: 25px;
    height: 25px;
    border-radius: 3px;
    margin-right: 3px;
}
/* ... */

